:bug: Smaller text on mobile heading

--- a/styles/components/_txt.scss
+++ b/styles/components/_txt.scss
@@ -16,8 +16,8 @@ a {
 // HEADINGS
 .h1,
 h1 {
-  font-size: clamp(45px, 5vw, 70px);
-  line-height: clamp(45px, 5vw, 70px);
+  font-size: clamp(30px, 5vw, 70px);
+  line-height: clamp(30px, 5vw, 70px);
   font-family: var(--font-safiro-medium);
 }
 
